--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Cheers</string>
+
+    <string name="plus">+</string>
+    <string name="minus">-</string>
+    <string name="zero">0</string>
 </resources>
