--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="new_counter_menu_item">New counter</string>
     <string name="stop_counter_menu_item">Stop counter</string>
     <string name="delete_counter_menu_item">Delete counter</string>
+    <string name="select_all_menu_item">Select all</string>
 
     <string name="beverage_name_label">Beverage name</string>
     <string name="alcohol">Alcohol</string>
