--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="fragment_categories">Counters</string>
     <string name="fragment_beverages">Beverages</string>
+    <string name="fragment_beverage">Beverage</string>
 
     <string name="new_counter_menu_item">New counter</string>
     <string name="stop_counter_menu_item">Stop counter</string>
